--- a/secret.yaml
+++ b/secret.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: secret
+namespace: <+infra.kubernetes.namespace>
 stringData:
   plaintext: notverysecure
 type: Opaque
