fix namespace specification for secret manifest

--- a/secret.yaml
+++ b/secret.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: secret
-  namespace: <+infra.kubernetes.namespace>
+  namespace: <+infra.namespace>
 stringData:
   plaintext: notverysecure
 type: Opaque
