update secret and external-secret manifests

--- a/secret.yaml
+++ b/secret.yaml
@@ -3,5 +3,5 @@ kind: Secret
 metadata:
   name: secret
 stringData:
-  plaintext: "I am a native Kubernetes secret."
+  secret: "I am a native Kubernetes secret."
 type: Opaque
