add ConfigMap manifest

--- a/manifests/external-secret.yaml
+++ b/manifests/external-secret.yaml
@@ -6,4 +6,4 @@ spec:
   backendType: secretsManager
   data:
     - key: harness/external-secret
-      name: external-secret
+      name: description
