--- a/manifests/secret.yaml
+++ b/manifests/secret.yaml
@@ -3,5 +3,5 @@ kind: Secret
 metadata:
   name: secret
 stringData:
-  secret: "I am a native Kubernetes secret."
+  description: "I am a native Kubernetes Secret."
 type: Opaque
