--- a/manifests/configmap.yaml
+++ b/manifests/configmap.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: configmap
+  name: config-map
 data:
   description: "I am a native Kubernetes ConfigMap."
