add annotations to all manifests

--- a/manifests/external-secret.yaml
+++ b/manifests/external-secret.yaml
@@ -1,6 +1,8 @@
 apiVersion: "kubernetes-client.io/v1"
 kind: ExternalSecret
 metadata:
+  annotations:
+    harness.io/managed: "true"
   name: external-secret
 spec:
   backendType: secretsManager
