--- a/manifests/secret.yaml
+++ b/manifests/secret.yaml
@@ -1,6 +1,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
+  annotations:
+    harness.io/managed: "true"
   name: secret
 stringData:
   description: "I am a native Kubernetes Secret."
