--- a/manifests/configmap.yaml
+++ b/manifests/configmap.yaml
@@ -1,6 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
+  annotations:
+    harness.io/managed: "true"
   name: config-map
 data:
   description: "I am a native Kubernetes ConfigMap."
